# PythonSIFT

./: .gitignore  LICENSE  README.md  pyproject.toml  pysift.py  setup.py  siftdetector.py  siftmatch.py  template_matching_demo.py
examples/: template_matching_demo.py
pysift/: __init__.py
tests/: conftest.py  test_setup_validation.py
